compatibility-tests/compile-fail/tests/ui/duplication-source-attributes.stderr
error: Multiple `source` attributes are not supported within an enum variant
  --> tests/ui/duplication-source-attributes.rs:10:17
   |
10 |         #[snafu(source)]
   |                 ^^^^^^
